Renombrar el paquete a "tmenu" y actualizar el archivo README.md con instrucciones de instalación y uso. Se implementa la lógica principal de la aplicación y se añaden comentarios detallados en el código.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "menu-rs"
+name = "tmenu"
 version = "0.1.0"
 edition = "2024"
 authors = ["Patricio Moracho\n<pmoracho@gmail.com>",]
